--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,8 @@
-<h1>Edit My Account</h1>
-
 <% form_for @user, :url => account_path do |f| %>
+  <h1>Edit My Account</h1>
+  
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
   <%= f.submit "Update" %>
 <% end %>
-
-<br /><%= link_to "My Profile", account_path %>
+<%#= link_to "My Profile", account_path %>
