--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <%= framework_meta_tags 'application' %>
     <title><%= controller.controller_name %>: <%= controller.action_name %></title>
     <%= stylesheet_link_tag 'reset' %>
     <%= stylesheet_link_tag 'default' %>
     <%= stylesheet_link_tag 'site' %>
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag :all, :recursive => true %>
   </head>
-  <body>
+  <body class='<%= body_classes %>'>
 
     <div id="header">
       <div id="logo">
