--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,7 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <%= framework_meta_tags 'application' %>
     <title><%= controller.controller_name %>: <%= controller.action_name %></title>
-    <%= stylesheet_link_tag 'reset' %>
-    <%= stylesheet_link_tag 'default' %>
-    <%= stylesheet_link_tag 'site' %>
+    <%= stylesheet_link_tag 'all' %>
     <%= javascript_include_tag :all, :recursive => true %>
   </head>
   <body class='<%= body_classes %>'>
@@ -26,7 +24,10 @@
       <div class='clearboth'></div>
     </div>
 
-    <%= yield  %>
+    <div id="content">
+      <%= yield  %>
+    </div>
 
+    <div id="footer"></div>
   </body>
 </html>
