--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing tasks</h1>
+<!-- <h1>Listing tasks</h1>
 
 <table>
   <tr>
@@ -25,4 +25,21 @@
 
 <br />
 
-<%= link_to 'New task', new_task_path %>
+<%= link_to 'New task', new_task_path %> -->
+<div id="i1_u0" class='quadrant'>
+  <div class='arrowhead'></div>
+  <%= render :partial => 'list', :object => @tasks.find_all {|t| t.importance == 1 and t.urgency == 0} %>
+</div>
+
+<div id="i1_u1" class='quadrant'>
+  <%= render :partial => 'list', :object => @tasks.find_all {|t| t.importance == 1 and t.urgency == 1} %>
+</div>
+
+<div id="i0_u0" class='quadrant'>
+  <%= render :partial => 'list', :object => @tasks.find_all {|t| t.importance == 0 and t.urgency == 0} %>
+</div>
+
+<div id="i0_u1" class='quadrant'>
+  <div class='arrowhead'></div>
+  <%= render :partial => 'list', :object => @tasks.find_all {|t| t.importance == 0 and t.urgency == 1} %>
+</div>
