--- a/public/stylesheets/sass/site.sass
+++ b/public/stylesheets/sass/site.sass
@@ -1,8 +1,13 @@
 body
   :padding 0 30px 0 30px
+  
+#loader
+  :visibility hidden
+  &.loading
+    :visibility visible
 
 #header
-  :height 64px
+  :height 70px
   :padding-top 10px
   :margin 0 -20px 0 -20px
 
@@ -24,6 +29,8 @@ body
     :color #CBCCCD
   
 #flash, #error
+  :float right
+  :clear right
   :margin-left 160px
   
 #flash
@@ -92,6 +99,7 @@ div.quadrant
   :height 100px
   :width 50%
   ol
+    :overflow-y auto
     li
       :background-color rgb(230, 230, 230)
       :border 1px solid rgb(150, 150, 150)
@@ -103,6 +111,7 @@ div.quadrant
   :float left
   :background-color #FFE6A3
   div.arrowhead
+    :visibility hidden
     :position absolute
     :left -12px
     :width 11px
@@ -121,6 +130,7 @@ div.quadrant
   :float right
   :background-color #F89C47
   div.arrowhead
+    :visibility hidden  
     :position absolute
     :right 0
     :bottom -12px
