--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,31 +1,7 @@
-<!-- <h1>Listing tasks</h1>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Star</th>
-    <th>Importance</th>
-    <th>Urgency</th>
-    <th>Position</th>
-  </tr>
-
-<% @tasks.each do |task| %>
-  <tr>
-    <td><%=h task.title %></td>
-    <td><%=h task.star %></td>
-    <td><%=h task.importance %></td>
-    <td><%=h task.urgency %></td>
-    <td><%=h task.position %></td>
-    <td><%= link_to 'Show', task %></td>
-    <td><%= link_to 'Edit', edit_task_path(task) %></td>
-    <td><%= link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+<% form_for(@task) do |f| %>
+  <%= render :partial => 'form', :locals => {:form => f} %>
 <% end %>
-</table>
 
-<br />
-
-<%= link_to 'New task', new_task_path %> -->
 <div id="i1_u0" class='quadrant'>
   <div class='arrowhead'></div>
   <%= render :partial => 'list', :object => @tasks.find_all {|t| t.importance == 1 and t.urgency == 0} %>
