Add/remove mostly working

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,3 +1,4 @@
-<li data-importance='<%= task.importance %>' data-urgency='<%= task.urgency %>'>
+<li data-id='<%= task.id %>' data-importance='<%= task.importance %>' data-urgency='<%= task.urgency %>'>
+  <%= check_box_tag 'delete', 1, false, :id => '', :class => 'delete' %>
   <%= task.title %>
 </li>
