--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form.error_messages %>
 
 <%= form.label :title %>
-<%= form.text_field :title %>
+<%= form.text_field :title, :autocomplete => "off" %>
 <!-- <p>
   <%= form.label :star %><br />
   <%= form.check_box :star %>
