--- a/public/stylesheets/sass/effects.sass
+++ b/public/stylesheets/sass/effects.sass
@@ -1,3 +1,7 @@
 =shadow()
   :-moz-box-shadow 5px 5px 5px #888
   :-webkit-box-shadow 5px 5px 5px #888
+  
+=glow()
+  :-moz-box-shadow 0 0 12px blue
+  :-webkit-box-shadow 0 0 12px blue
