Added demo badge.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     <div id="header">
       <div id="logo">
         <span>Tavio</span>
-      </div>        
+      </div>
+      <div id="demo_badge"></div>
       <div id="nav">
         <%= render :partial => "/shared/nav" %>
       </div>
