--- a/public/stylesheets/sass/site.sass
+++ b/public/stylesheets/sass/site.sass
@@ -32,6 +32,15 @@ body
     :text-transform uppercase
     :letter-spacing -4px
     :font-family Helvetica, Arial, sans-serif
+    
+#demo_badge
+  :width 48px
+  :height 50px
+  :position absolute
+  :top 30px
+  :left 160px
+  :background url(/images/demo_badge.png) no-repeat 0 0
+  :z-index 2
 
 #nav
   :float right
@@ -108,7 +117,7 @@ body.c_tasks.v_index
     :margin 0px
     :width 370px
     :top 10px
-    :left 200px
+    :left 210px
     label[for=task_title]
       :display none
     .quadrant_chooser
