--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -8,6 +8,11 @@ h1
   :font-size = !base_font_size + 6px
   :font-weight bold
   :padding 0 0 10px 0
+
+h2
+  :font-size = !base_font_size + 4px
+  :font-weight bold
+  :padding 0 0 10px 0
   
 a
   :color black
