--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <div id="header">
       <div id="logo">
-        <span>Tavio</span>
+        <span>Eisenhower Matrix</span>
       </div>
       <div id="demo_badge"></div>
       <div id="nav">
