Added an Invitation Code to use in the new user form.

--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -2,7 +2,7 @@
 <%= form.text_field :email %>
 
 <% if form.object.new_record? %>
-  <%= form.label :invitation_code %>
+  <%= form.label :invitation_code, 'Invitation Code (use: 99900000)' %>
   <%= form.text_field :invitation_code %>
 <% end %>
 
